--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,7 @@
-add_executable(RSA-Encryptor main.cpp utility.cpp key.cpp encryption.cpp)
+add_executable(RSA-Encryptor
+        main.cpp
+        utility.cpp
+        key.cpp
+        encryption.cpp
+        cli.cpp
+)
