Starting point for a CLI (#4)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,7 @@
-add_executable(RSA-Encryptor main.cpp utility.cpp)
+add_executable(RSA-Encryptor
+        main.cpp
+        utility.cpp
+        keys.cpp
+        encryption.cpp
+        cli.cpp
+)
