--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,10 +10,13 @@ on:
 jobs:
   debug:
     name: Debug Build
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.config.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest, windows-latest, macos-latest ]
+        config:
+          - { name: "Windows MSVC", os: windows-latest, cc: "cl", cxx: "cl" }
+          - { name: "Ubuntu gcc", os: ubuntu-latest, cc: "gcc", cxx: "g++" }
+          - { name: "MacOS clang", os: macos-latest, cc: "clang", cxx: "clang++" }
         build-configuration: [ Debug, Release ]
 
     steps:
@@ -22,7 +25,12 @@ jobs:
         with:
           submodules: true
 
+      - name: Setup Ninja
+        uses: ashutoshvarma/setup-ninja@master
+
       - name: Build Project
         uses: threeal/cmake-action@v2.1.0
         with:
-          args: -DCMAKE_BUILD_TYPE=${{ matrix.build-configuration }}
+          args: -G Ninja -DCMAKE_BUILD_TYPE=${{ matrix.build-configuration }}
+          c-compiler: ${{ matrix.config.cc }}
+          cxx-compiler: ${{ matrix.config.cxx }}
